--- a/app/views/management/widget_steps/filters.html.erb
+++ b/app/views/management/widget_steps/filters.html.erb
@@ -15,7 +15,7 @@
 
 
 <%= form_for(@widget, url: wizard_path, method: :put, :html => {:class => 'js-form'}) do |f| %>
-  <div class="l-page-creation -filters">
+  <div class="l-widget-creation -filters">
     <div class="wrapper">
       <div class="js-filters"></div>
     </div>
