--- a/app/views/management/widget_steps/title.html.erb
+++ b/app/views/management/widget_steps/title.html.erb
@@ -11,7 +11,7 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @widget, url: wizard_path, method: :put do |f| %>
-  <div class="l-dataset-creation -title">
+  <div class="l-widget-creation -title">
     <div class="wrapper">
       <div class="c-inputs-container">
         <div class="container -big">
