--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -3,6 +3,33 @@
   // screen has a small height
   padding-bottom: 75px;
 
+  &.-title {
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 300px);
+    padding-top: 50px;
+
+    > .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &.-filters {
+    margin-top: 50px;
+  }
+
+  &.-dataset {
+    .context {
+      margin: 50px 0 10px;
+      font-size: $font-size-big;
+      font-weight: $font-weight-light;
+      letter-spacing: .2px;
+      line-height: 1.14;
+    }
+  }
+
   &.-visualization {
     padding-top: 50px;
 
