Implements the list of widgets

--- a/app/views/management/widgets/index.html.erb
+++ b/app/views/management/widgets/index.html.erb
@@ -2,6 +2,17 @@
 <%= include_gon %>
 <div class="js-tabs"></div>
 
+<div class="l-page-list">
+  <div class="wrapper">
 
-<h1>Under construction...</h1>
-<%= console if Rails.env.development? %>
+    <div class="c-action-toolbar">
+      <ul class="buttons">
+      </ul>
+      <ul class="filters">
+        <li><div class="c-input-search js-table-search"></div></li>
+      </ul>
+    </div>
+
+    <div class="js-table"></div>
+  </div>
+</div>
