Added list of widgets on the open content page

--- a/app/views/management/page_steps/open_content_preview.html.erb
+++ b/app/views/management/page_steps/open_content_preview.html.erb
@@ -9,6 +9,7 @@
   </div>
 </div>
 
+<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
   <%= render partial: 'management/steps_shared/finish_footer', locals: {f: f} %>
 <% end %>
