Shows the real list of widgets in the wysiwyg
This commit also updates the configuration of the widgets so they respect the space they've been allocated to render. The line chart has been further modified as it wasn't working properly.

--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -1,12 +1,7 @@
 {
   "width": {{{width}}},
   "height": {{{height}}},
-  "padding": {
-    "top": 10,
-    "left": 0,
-    "bottom": 30,
-    "right": 0
-  },
+  "padding": "strict",
   "data": [{
     "name": "table",
     "values": {{{data}}}
