--- a/app/assets/javascripts/templates/front/charts/pie.hbs
+++ b/app/assets/javascripts/templates/front/charts/pie.hbs
@@ -1,6 +1,7 @@
 {
   "width": {{{width}}},
   "height": {{{height}}},
+  "padding": "strict",
   "data": [{
     "name": "table",
     "values": {{{data}}},
@@ -47,7 +48,8 @@
           "value": 0
         },
         "outerRadius": {
-          "value": 100
+          "value": {{{height}}},
+          "mult": 0.5
         },
         "stroke": {
           "value": "#fff"
