--- a/app/assets/javascripts/templates/front/charts/scatter.hbs
+++ b/app/assets/javascripts/templates/front/charts/scatter.hbs
@@ -1,12 +1,7 @@
 {
   "width": {{{width}}},
   "height": {{{height}}},
-  "padding": {
-    "top": 10,
-    "left": 0,
-    "bottom": 30,
-    "right": 0
-  },
+  "padding": "strict",
   "data": [{
     "name": "table",
     "values": {{{data}}}
