--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -289,19 +289,12 @@
       border: 1px solid $color-7;
       background-color: $color-3;
 
-      &.-half {
-        width: calc((100% + 390px) / 2 - 10px);
-        margin-right: 20px; // Margin with other content
-        float: left;
-        clear: none;
-
-        & + .-half {
-          transform: translateX(195px);
-        }
-      }
-
       &:not(:hover) .toolbar {
         display: none;
+      }
+
+      .error {
+        text-align: center;
       }
     }
   }
