Updates the URL to fetch the widget from

--- a/app/assets/stylesheets/components/shared/c-content.scss
+++ b/app/assets/stylesheets/components/shared/c-content.scss
@@ -145,5 +145,9 @@
       max-width: $media-max-width;
       padding: 60px 60px 40px;
     }
+
+    .error {
+      text-align: center;
+    }
   }
 }
