--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -1,15 +1,13 @@
-
 .c-cover {
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center;
-  padding: 50px 0 30px 0;
+  padding: 50px 0 30px;
   // image sample. This property should be injected through javascript
   background-image: asset-url('cover.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  z-index: -1;
 
   @media #{$mq-mobile} {
     padding: 100px 0;
@@ -28,13 +26,16 @@
     width: 100%;
     height: 100%;
     content: '';
-    z-index: -1;
 
     @if $theme == 2 {
       background-color: rgba($color-5, .3);
     } @else {
       background-color: rgba($color-1, .4);
     }
+  }
+
+  > .wrapper {
+    z-index: 1;
   }
 
   .cover-title {
