Fixes an issue with the language selector
The language selector wouldn't show the correct current value has it would be translated itself.

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -72,7 +72,7 @@
       <% end -%>
     </ul>
     <ul>
-      <li class="js-language-selector"></li>
+      <li class="notranslate js-language-selector"></li>
     </ul>
   </div>
 
