--- a/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
+++ b/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
@@ -29,7 +29,7 @@
     bottom: -3px;
     left: calc(50% - 27px);
     width: auto;
-    padding: 10px 20px;
+    padding: 0;
     transform: translateY(100%);
     transition: opacity .2s, pointer-events 0 .2s;
     border-radius: 2px;
@@ -46,10 +46,9 @@
       width: 12px;
       height: 12px;
       transform: rotate(45deg);
-      border-top: 12px solid;
-      border-left: 12px solid;
-      border-color: $color-3;
+      background-color: $color-3;
       content: '';
+      z-index: -1;
     }
 
     &.-visible {
@@ -60,10 +59,33 @@
 
     .option {
       display: block;
-      padding-left: 10px;
+      padding: 0 20px;
+      border-bottom: 1px solid $color-9;
       color: $color-4;
       line-height: 2.5;
       cursor: pointer;
+
+      &:first-of-type {
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
+      }
+
+      &:last-of-type {
+        border-bottom: 0;
+        border-bottom-left-radius: 2px;
+        border-bottom-right-radius: 2px;
+      }
+
+      &:hover,
+      &:focus {
+        outline: none;
+
+        @if $theme == 2 {
+          background-color: $color-8;
+        } @else {
+          background-color: rgba($color-1, .1);
+        }
+      }
 
       &.-active {
         position: relative;
@@ -73,7 +95,7 @@
           display: block;
           position: absolute;
           top: 50%;
-          left: -8px;
+          left: 5px;
           width: 8px;
           height: 8px;
           transform: translateY(-50%) rotate(45deg);
