--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -72,7 +72,7 @@
       <% end -%>
     </ul>
     <ul>
-      <li><a href="#">LANG</a></li>
+      <li class="notranslate js-language-selector"></li>
     </ul>
   </div>
 
