Corrected listing of contexts. Done the first version of the context creation

--- a/app/views/context_steps/title.html.erb
+++ b/app/views/context_steps/title.html.erb
@@ -1,7 +1,7 @@
 <div class="c-extended-header">
   <div class="wrapper">
     <div class="description">
-      <h1>Dataset title</h1>
+      <h1>Context title</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
     </div>
   </div>
