--- a/app/views/context_steps/writers.html.erb
+++ b/app/views/context_steps/writers.html.erb
@@ -1,7 +1,7 @@
 <div class="c-extended-header">
   <div class="wrapper">
     <div class="description">
-      <h1>Sites</h1>
+      <h1>Writers</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
     </div>
   </div>
@@ -15,7 +15,7 @@
   <div class="l-dataset-creation -context">
     <div class="wrapper">
       <div class="c-cards-list">
-        <% @permitted_writers.all.each do |user|%>
+        <% @permitted_writers.each do |user|%>
           <div class="card -single-data">
             <label for="user-<%= user.id%>"><%= user.name%></label>
             <%= check_box_tag 'context[user_ids][]', "#{user.id}", false, id: "user-#{user.id}" %>
@@ -27,7 +27,7 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: context_path} %>
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: contexts_path} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @context } %>
 <%= console if Rails.env.development? %>
