Updates the styles of the table modal

--- a/app/assets/javascripts/templates/shared/table-modal.hbs
+++ b/app/assets/javascripts/templates/shared/table-modal.hbs
@@ -1,5 +1,7 @@
 <div class="c-table-modal">
-  <h1>{{title}}</h1>
+  <h1>List of {{columnName}}</h1>
+
+  <p>Here is the complete list of the "{{columnName}}" of the selected row:</p>
 
   <ul>
     {{#each values}}
