--- a/app/assets/stylesheets/components/shared/c-table-modal.scss
+++ b/app/assets/stylesheets/components/shared/c-table-modal.scss
@@ -1,8 +1,11 @@
 .c-table-modal {
-  padding: 30px 45px;
+  max-width: 515px;
+  margin: 0 auto;
+  padding: 45px;
+  font-size: $font-size-s-normal;
 
   h1 {
-    margin: 0 0 20px;
+    margin: 0 0 60px;
     font-size: $font-size-huge;
     font-weight: $font-weight-light;
     text-align: center;
@@ -10,12 +13,11 @@
 
   ul {
     display: block;
-    margin: 20px 0;
+    margin: 30px 0;
 
     li {
       display: list-item;
       margin-bottom: 1em;
-      list-style-type: disc;
 
       &:last-of-type {
         margin-bottom: 0;
