--- a/app/views/context_steps/sites.html.erb
+++ b/app/views/context_steps/sites.html.erb
@@ -18,7 +18,7 @@
         <% @permitted_sites.all.each do |site| %>
           <div class="card -single-data">
             <label for="site-<%= site.id%>"><%= site.name%></label>
-            <%= check_box_tag 'context[site_ids][]', "#{site.id}", false, id: "site-#{site.id}" %>
+            <%= check_box_tag 'context[site_ids][]', "#{site.id}", f.object.sites.include?(site), id: "site-#{site.id}" %>
             <div class="content">
               <h3><%= site.name %></h3>
             </div>
