--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="c-header-admin">
   <div class="wrapper">
     <div>
-      <div class="site-switcher js-site-switcher"></div>
+      <div class="quick-links js-quick-links"></div>
       <% unless @breadcrumbs.blank? %>
           <ul class="breadcrumbs">
             <% @breadcrumbs.each do |breadcrumb| -%>
