--- a/app/assets/stylesheets/admin/_settings.scss
+++ b/app/assets/stylesheets/admin/_settings.scss
@@ -41,13 +41,15 @@ $color-3:  #fff;
 $color-4:  #555;
 $color-5:  #000;
 $color-6:  #333;
-$color-7:  #dededd;
-$color-8:  #ff706c;
-$color-9:  #404040;
+$color-7:  #3b3b3b;
+$color-8:  #f5f4f4;
+$color-9:  #eceaea;
 $color-10: darken(saturate($color-1, 10%), 5%);
 $color-11: #fff00e;
 $color-12: #dd3e21;
 $color-13: #dededd;
+$color-14:  #ff706c;
+$color-15:  #404040;
 
 // General layout
 $body-max-width:         1280px;
