--- a/app/assets/stylesheets/front/_settings-theme-fa.scss
+++ b/app/assets/stylesheets/front/_settings-theme-fa.scss
@@ -48,6 +48,8 @@ $color-10: darken(saturate($color-1, 10%), 5%);
 $color-11: #fff00e;
 $color-12: #dd3e21;
 $color-13: #dededd;
+$color-14:  #ff706c;
+$color-15:  #404040;
 
 // General layout
 $body-max-width:         1280px;
