--- a/app/views/site_page/_site_map.html.erb
+++ b/app/views/site_page/_site_map.html.erb
@@ -1,14 +1,9 @@
-<h1><%= @menu_root.site.name%></h1>
-<p>
-  <a href="<%= @menu_tree.keys.first.url %>"><%= @menu_tree.keys.first.name %></a>
-</p>
-<% @menu_tree.values.first.each do |k_node, v_node| %>
-  <p>
-    <a href="<%= k_node.url %>"><%= k_node.name %></a>
-    <% v_node.each_key do |k_sub_node| %>
-      <p>
-        <a href="<%= k_sub_node.url %>"><%= k_sub_node.name %></a>
-      </p>
-  <% end%>
-  </p>
-<% end %>
+<p>Here are some links you might find helpful:</p>
+
+<ul class="sitemap">
+  <li><a href="<%= @menu_tree.keys.first.url %>"><%= @menu_root.site.name %></a></li>
+  <% @menu_root.children.each do |page| %>
+    <% next unless (page.show_on_menu && page.visible?) %>
+    <li><%= page_link page %></li>
+  <% end %>
+</ul>
