--- a/app/views/site_page/not_found.html.erb
+++ b/app/views/site_page/not_found.html.erb
@@ -1,3 +1,15 @@
-Page not found
+<div class="c-cover -short">
+  <div class="wrapper">
+    <h2 class="cover-title">Error 404</h2>
+  </div>
+</div>
 
-<%= render partial: 'site_map' %>
+<div class="l-error-page">
+  <div class="wrapper">
+    <h1>The content requested hasn’t been found</h1>
+    <%= render partial: 'site_map' %>
+  </div>
+</div>
+
+<%= render 'front/footer' %>
+
