--- a/app/views/site_page/unacceptable.html.erb
+++ b/app/views/site_page/unacceptable.html.erb
@@ -1,3 +1,14 @@
-Wrong request
+<div class="c-cover -short">
+  <div class="wrapper">
+    <h2 class="cover-title">Wrong request</h2>
+  </div>
+</div>
 
-<%= render partial: 'site_map' %>
+<div class="l-error-page">
+  <div class="wrapper">
+    <h1>The page can't be currently accessed</h1>
+    <%= render partial: 'site_map' %>
+  </div>
+</div>
+
+<%= render 'front/footer' %>
