--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,6 +9,7 @@
   <%= favicon_link_tag %>
 </head>
 <body>
+<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
   <%= render 'admin/header' %>
   <%= yield :extended_header %>
   <%= yield %>
