--- a/app/assets/stylesheets/components/shared/c-table.scss
+++ b/app/assets/stylesheets/components/shared/c-table.scss
@@ -77,6 +77,7 @@
     color: $color-1;
     font-family: $font-family-1;
     font-size: $font-size-normal;
+    text-align: left;
     cursor: pointer;
   }
 }
