--- a/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
+++ b/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
@@ -38,6 +38,7 @@
     font-weight: $font-weight-normal;
     box-shadow: 0 1px 3px 0 rgba($color-5, .25);
     opacity: 0;
+    z-index: 15;
     pointer-events: none;
 
     &::before {
