--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -72,3 +72,4 @@ $mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
 $mq-body-width: 'screen and (min-width: #{$body-max-width})';
 
 $theme: 2;
+$admin: false;
